--- a/style.css
+++ b/style.css
@@ -533,7 +533,9 @@ li.selected:hover{
     height: 100%;
     padding-left: 64px;
     padding-right: 64px;
-    background-image: url('./img/bg.png');
+    background: 
+		linear-gradient(rgba(0, 0, 0, 0.21), rgba(0, 0, 0, 0.21)), 
+		url('./img/bg.png');
     background-repeat: no-repeat;
     background-size: cover;
     z-index: 3;
